# m1-dating-support

./: .env.example  00 - Contexto y Objetivos.docx  Dockerfile  Entregable.docx  README.md  pyproject.toml  run_batch.py
api/: main.py
metrics/: metrics.json
prompts/: router_prompt.md
prompts/specialists/: cuenta.md  matches.md  pagos.md  seguridad.md  tecnico.md
reports/: PI_report_es.md
src/: logger_config.py  metrics.py  models.py  pii_hasher.py  router.py  run_query.py  safety.py  specialists.py
tests/: test_core.py
